# EyeD

./: .env.example  .gitignore  .gitmodules  EyeD.pro  GATEWAY_CHECKPOINT.md  GATEWAY_MIGRATION_SUMMARY.md  MODERN_ARCHITECTURE.md  Makefile  README.md  build.sh  build_xcode.sh  dev-option.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.smpc2.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.webcam-macos.yml  docker-compose.webcam.yml  docker-compose.yml  eyed-smpc-pentest.md  eyed-smpc-vnv.md  plan-migrate-gateway-to-cpp.md
camera/: EyeD.pro
camera/src/: Buffer.h  CameraConnectDialog.cpp  CameraConnectDialog.h  CaptureThread.cpp  CaptureThread.h  Config.h  MainWindow.cpp
capture/: CMakeLists.txt  Dockerfile
capture/config/: capture.toml
capture/src/: camera.cpp  camera.h  client.cpp  client.h  main.cpp  quality_gate.cpp  quality_gate.h  ring_buffer.h
client/: Dockerfile  nginx.conf  pubspec.yaml
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart
client/lib/config/: constants.dart  (+1 more)
client/web/: index.html
client2/: Dockerfile  nginx.conf  pubspec.yaml
client2/lib/: app.dart  main.dart
client2/linux/: CMakeLists.txt
client2/test/: widget_test.dart
client2/web/: index.html
config/: init-engine2.sh  init.sql  nats-server-tls.conf  nats-server.conf
config/migrations/: 001_add_popcount_columns.sql
docs/: HE_EVALUATION_REPORT.md  USER_GUIDE.md  developer-guide.md  troubleshooting.md  user-guide.md
gateway/: CMakeLists.txt  Dockerfile  go.mod
gateway/cmd/gateway/: main.go
gateway/cmd/integration-test/: main.go
gateway/cmd/ws-test/: main.go
gateway/internal/breaker/: breaker.go
gateway/internal/config/: config.go
gateway/internal/grpc/: server.go
gateway/internal/health/: handler.go
gateway/internal/nats/: client.go
gateway/internal/ws/: hub.go  signaling.go
gateway/src/: breaker.cpp  breaker.h  config.h  grpc_server.cpp  grpc_server.h  http_server.cpp  http_server.h  main.cpp  nats_client.cpp  nats_client.h  signaling_hub.cpp  signaling_hub.h  ws_hub.cpp  ws_hub.h
gateway/tests/: CMakeLists.txt  test_breaker.cpp  test_config.cpp  test_grpc_server.cpp  test_http_server.cpp  test_nats_client.cpp  test_signaling_hub.cpp  test_ws_hub.cpp
gateway/tools/: CMakeLists.txt  integration_test.cpp  ws_test.cpp
iris-engine/: Dockerfile  pyproject.toml  requirements.txt
iris-engine/scripts/: migrate_aes_to_npz.py
iris-engine/src/: config.py  core.py  crypto.py  db.py  db_drain.py  he_context.py  he_matcher.py  health.py  key_client.py  main.py  matcher.py  models.py  nats_service.py  pipeline.py  pipeline_pool.py  redis_cache.py
iris-engine/src/routes/: analyze.py  datasets.py  db_inspector.py  enroll.py  gallery.py  health.py
iris-engine/tests/: conftest.py  test_benchmark.py  test_crypto.py  test_fnmr.py  test_fnmr_mmu2.py  test_he_context.py  test_he_enrollment.py  test_he_matching.py  test_migration.py  test_pack_unpack.py  test_pipeline.py
iris-engine2/: CMakeLists.txt  Dockerfile  docker-compose.test.yml
iris-engine2/scripts/: gen-certs.sh  run-integration-tests.sh  run-smpc2-integration-tests.sh
iris-engine2/smpc-party/: Dockerfile  main.cpp
iris-engine2/smpc2-party/: Dockerfile  Dockerfile.test  main.cpp
iris-engine2/src/: config.h  db.cpp  db.h  fhe.cpp  fhe.h  gallery.cpp  gallery.h  main.cpp  nats_client.cpp  nats_client.h  nats_smpc2_bus.cpp  nats_smpc2_bus.h  routes_analyze.cpp  routes_analyze.h  routes_config.cpp  routes_config.h  routes_enroll.cpp  routes_enroll.h  routes_gallery.cpp  routes_gallery.h  routes_health.cpp  routes_health.h  secure_memory.h  server_context.h  smpc.cpp  smpc.h  smpc2_manager.cpp  smpc2_manager.h  smpc2_nats_codec.cpp  smpc2_nats_codec.h  smpc_distributed.cpp  utils.h
iris-engine2/tests/: CMakeLists.txt  bench_smpc.cpp  test_config.cpp  test_db.cpp  test_fhe.cpp  test_gallery.cpp  test_migration.cpp  test_smpc.cpp  test_smpc2_manager.cpp  test_smpc_coordinator.cpp  test_smpc_security.cpp  test_smpc_sharded.cpp
iris-engine2/tests/integration/: smpc_integration.cpp
key-service/: CMakeLists.txt  Dockerfile
key-service/src/: handlers.cpp  handlers.h  he_context.cpp  he_context.h  main.cpp  nats_service.cpp  nats_service.h
legacy/: README.md
legacy/camera/: CMakeLists.txt  build.sh
legacy/camera/src/: CMakeLists.txt  COPYING  CameraConnectDialog.ui  FrameLabel.cpp  ImageProcessingSettingsDialog.h  ProcessingThread.cpp  ProcessingThread.h  SharedImageBuffer.h  Structures.h
legacy/client/: .dockerignore  pubspec.yaml
legacy/iris-engine/: Dockerfile  requirements.txt
legacy/web-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
openface/: opencv-dlib-torch.Dockerfile
openface/data/: clenup.sh  preprocess.sh
openface/demos/: sphere.py
openface/training/: opts.lua
proto/: capture.proto
scripts/: export_training.py
scripts/vnv/: Dockerfile  analyze.py  benchmark.py  profile.py  report.py  requirements.txt
src/: CameraConnectDialog.cpp  CameraConnectDialog.ui  CameraView.cpp  CameraView.h  Config.h  Faces.cpp  Faces.h  FrameLabel.cpp  FrameLabel.h  ImageProcessingSettingsDialog.cpp  ImageProcessingSettingsDialog.h  ImageProcessingSettingsDialog.ui  ImageUtils.cpp  ImageUtils.h  MainWindow.h  MainWindow.ui  MatToQImage.cpp  MatToQImage.h  ProcessingThread.cpp  ProcessingThread.h  Structures.h  main.cpp
storage/: CMakeLists.txt  Dockerfile  go.mod
storage/cmd/storage/: main.go
storage/internal/archive/: handler.go
storage/internal/config/: config.go
storage/internal/retention/: purger.go
storage/internal/store/: local.go  store.go
storage/src/: archive_handler.cpp  archive_handler.h  config.h  local_store.cpp  local_store.h  main.cpp  object_store.h  retention_purger.cpp  retention_purger.h
storage/tests/: CMakeLists.txt  test_archive_handler.cpp  test_config.cpp  test_local_store.cpp  test_retention_purger.cpp
tools/: CMakeLists.txt  webcam-relay.cpp
webpage/: README.md  index.html
webpage/terraform/: main.tf  outputs.tf  variables.tf
(+174 files in other folders)
